infrastructure/manifests/frappe-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frappe-education
  namespace: frappe
spec:
  parentRefs:
    - name: frappe-gateway
      namespace: frappe
  hostnames:
    - "education.escazu.edupan.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frappe-education-erpnext
          port: 8080
